--- a/levels/FS/success8.html
+++ b/levels/FS/success8.html
@@ -131,7 +131,7 @@
                 <p class="certificate-name text-yellow-400" id="playerName"></p>
                 <p class="text-gray-400">has successfully completed</p>
                 <p class="certificate-text text-green-400 my-4">
-                    FinQuest: Financial Literacy Program
+                    EduFinance: Financial Literacy Program
                 </p>
                 <div class="mt-8 space-y-2">
                     <p class="text-sm text-gray-400">Mastering:</p>
@@ -179,7 +179,7 @@
         function downloadCertificate() {
             html2canvas(document.getElementById('certificateContent')).then(canvas => {
                 const link = document.createElement('a');
-                link.download = 'FinQuest-Certificate.png';
+                link.download = 'EduFinance-Certificate.png';
                 link.href = canvas.toDataURL();
                 link.click();
             });
